...
            "value" : "Benutzername"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Username"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nom d'utilisateur"
...
            "value" : "Online gehen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Go online"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aller en ligne"
...
            "value" : "Geladen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Offline"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hors ligne"
...
            "value" : "Willkommen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bienvenu"
...
